<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="android.assignment.sharingfridge.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/set_language"
        android:textSize="9pt" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Language">

        <RadioButton
            android:id="@+id/language_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/default_language" />

        <RadioButton
            android:id="@+id/language_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English" />

        <RadioButton
            android:id="@+id/language_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中文" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cache"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/clean_cache_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_cache" />

    <Button
        android:id="@+id/clean_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/local_db"
        android:textColor="@android:color/white" />

</LinearLayout>
